# AB_test_mechanic_paymentservice

./: AB_test_paymentservice.ipynb  README.md  pyproject.toml  utils.py
db/: Проект_2_active_studs.csv:Zone.Identifier  Проект_2_checks.csv:Zone.Identifier  Проект_2_group_add.csv:Zone.Identifier  Проект_2_groups.csv:Zone.Identifier
