[tool.poetry]
name = "ab-test-mechanic-paymentservice"
version = "0.1.0"
description = "A/B–тестирование новой механики оплаты услуг на сайте"
authors = ["agrova"]
readme = "README.md"
packages = [{include = "ab_test_mechanic_paymentservice"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
requests = "^2.28.2"
numpy = "^1.24.2"
statsmodels = "^0.13.5"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
ipykernel = "^6.22.0"
jupyter = "^1.0.0"
scikit-learn = "^1.2.2"
tqdm = "^4.65.0"
pingouin = "^0.5.3"
pandahouse = "^0.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
